changed background, fixed loading flicker

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	margin: 0;
-	background: #000;
+	background: url(img/hd/bg.jpg) 50% 50% no-repeat #000;
 	text-align: left;
 	overflow: hidden;
 }
@@ -21,7 +21,7 @@ html, body {
 	width: 100%;
 	height: 100%;
 	z-index: 1050;
-	opacity: 0.9;
+	opacity: 1.0;
 	background: url(img/poi.gif) 50% 50% no-repeat #fff;
 }
 
